# Pharos

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  project.yml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Pharos.xcodeproj/: project.pbxproj
Pharos/App/: AppDelegate.swift  CrashLogger.swift  Info.plist  MainMenu.swift  main.swift
Pharos/CPharosCore/: module.modulemap
Pharos/Core/: AppStateManager.swift  MetadataCache.swift  PharosCore+Connection.swift  PharosCore+Query.swift  PharosCore+QueryHistory.swift  PharosCore+SavedQueries.swift  PharosCore+Schema.swift  PharosCore+Settings.swift  PharosCore+TableMetadata.swift  PharosCore+TableOps.swift  PharosCore+Workspaces.swift  PharosCore.swift  PulseClock.swift  QueryNotifier.swift  UpdateChecker.swift  VariableSubstitutor.swift
Pharos/Editor/: FoldState.swift  (+10 more)
PharosTests/: ChartAggregatorTests.swift  ChartConfigTests.swift  ChartExportCaptionTests.swift  ChartPaletteTests.swift  ChartSorterTests.swift  ColumnClassifierTests.swift  ColumnTypeIconTests.swift  DestructiveSQLScannerTests.swift  DrillCoverageTests.swift  DrillKeyTests.swift  DrillMergeTests.swift  DrillSqlTranslatorTests.swift  DrillSummaryTests.swift  DrillTranslatorTests.swift  FilterPopoverSizingTests.swift  FilterValueCountsTests.swift  PartitionDisplayTests.swift  PartitionOrderingTests.swift  ResultCellTextTests.swift  ResultTabResolverTests.swift  SQLListFormatterTests.swift  SchemaListFilterTests.swift  ServerChartDataBuilderTests.swift  SqlPushdownGeneratorTests.swift  TableDDLTests.swift  ValueCoercionTests.swift  VariableSubstitutorTests.swift  main.swift
docs/: _config.yml  charts.md  column-filters.md  connections.md  data-export.md  explain.md  getting-started.md  index.md  inline-editing.md  inspector.md  ipad-app-strategy.md  keyboard-shortcuts.md  query-editor.md  query-execution.md  query-history.md  query-variables.md  results-grid.md  saved-queries.md  schema-browser.md  settings.md  table-operations.md
pharos-core/: Cargo.toml  build-lib.sh  build.rs  cbindgen.toml
pharos-core/include/: pharos_core.h
pharos-core/src/: ffi.rs  lib.rs  state.rs
pharos-core/src/commands/: connection.rs  ddl.rs  metadata.rs  mod.rs  query.rs  query_history.rs  saved_query.rs  settings.rs  table.rs  workspace.rs
pharos-core/src/db/: credentials.rs  postgres.rs  sqlite.rs
pharos-core/src/ffi/: connection.rs  lifecycle.rs  mod.rs  query.rs  query_history.rs  saved_queries.rs  schema.rs  settings.rs  table_metadata.rs  table_ops.rs  workspace.rs
pharos-core/src/models/: connection.rs  mod.rs  query_history.rs  saved_query.rs  schema.rs  settings.rs  workspace.rs
scripts/: sync-version.js  test-chart-aggregator.sh  test-chart-config.sh  test-chart-export-caption.sh  test-chart-palette.sh  test-chart-sorter.sh  test-column-classifier.sh  test-column-type-icon.sh  test-destructive-sql-scanner.sh  test-drill-coverage.sh  test-drill-key.sh  test-drill-merge.sh  test-drill-sql.sh  test-drill-summary.sh  test-drill-translator.sh  test-filter-popover-sizing.sh  test-filter-value-counts.sh  test-partition-display.sh  test-partition-ordering.sh  test-result-cell-text.sh  test-result-tab-resolver.sh  test-schema-list-filter.sh  test-server-chart-builder.sh  test-sql-list-formatter.sh  test-sql-pushdown.sh  test-table-ddl.sh  test-value-coercion.sh  test-variable-substitutor.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection.rs  metadata.rs  mod.rs  query.rs  query_history.rs  saved_query.rs  settings.rs  table.rs
src-tauri/src/db/: credentials.rs  mod.rs  postgres.rs  sqlite.rs
src-tauri/src/models/: connection.rs  mod.rs  query_history.rs  saved_query.rs  schema.rs  settings.rs
tasks/: todo.md
(+203 files in other folders)
