[package]
name = "pharos-core"
version = "0.1.0"
description = "Core backend library for the Pharos PostgreSQL client"
edition = "2021"
rust-version = "1.77.2"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "ipnetwork", "mac_address", "rust_decimal"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Network types
ipnetwork = "0.20"
mac_address = "1.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
csv = "1.3"
rust_xlsxwriter = "0.82"
keyring = { version = "3", features = ["apple-native"] }
urlencoding = "2"
sqlformat = "0.3"
flate2 = "1"

[build-dependencies]
cbindgen = "0.27"
