[package]
name = "pharos"
version = "0.0.0-dev"
description = "A high-performance PostgreSQL client with Liquid Glass UI"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pharos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "ipnetwork", "mac_address"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Network types
ipnetwork = "0.20"
mac_address = "1.1"

# Window vibrancy for Liquid Glass effect
window-vibrancy = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
csv = "1.3"
keyring = { version = "3", features = ["apple-native"] }
urlencoding = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
